# daf-epubs

./: .firebaserc  .gitignore  Dockerfile  README.md  docker-compose.yml  firebase.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  firebase-hosting-merge.yml
daf-epubs/: main.py
daf-epubs/.github/workflows/: release.yml  versioning.yml
daf-epubs/env_vars/: development.env  staging.env
daf_epubs/: .dockerignore  Dockerfile  main.py  pyproject.toml
daf_epubs/.github/workflows/: ci.yml  deploy.yml
daf_epubs/api/: base.py
daf_epubs/archive/: main-WIP-chainbase.py  pyproject.toml
daf_epubs/env_vars/: development.env  local.env  production.env  staging.env  test.env
scrape_epubs/: Dockerfile  main.py  publications_data.json  publications_data_FULL.json  pyproject.toml  scraper.py
scrape_epubs/env_vars/: production.env
scrape_epubs/src/: pdf_pipeline.py  scraper.py  source_saver.py
