[tool.poetry]
name = "daf-epubs"
version = "0.0.1"
description = "Hybrid rerank search for DAF epubs using chainbase and chainbase-hrr"
authors = ["Eric Robinson"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "~3.11"
aimbase = "^0.0.7"
sentence-transformers = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
