[tool.poetry]
name = "daf-epubs"
version = "0.0.1"
description = "Hybrid rerank search for DAF epubs using chainbase and chainbase-hrr"
authors = ["Eric Robinson"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "~3.11"
aimbase = "^0.0.10"
sentence-transformers = "^2.2.2"
google-generativeai = "^0.3.2"
langchain-google-genai = "^0.0.6"
langchain = "^0.1.2"
chainlit = "^1.0.200"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
