[tool.poetry]
name = "scrape-epubs"
version = "0.0.1a"
description = "Scrape AF ePubs regularly"
authors = ["Eric Robinson"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.1.2"
numpy = "^1.26.1"
bs4 = "^0.0.1"
selenium = "^4.14.0"
webdriver-manager = "^4.0.1"
unstructured = {extras = ["pdf"], version = "^0.11.6"}
aimbase = "^0.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
